--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,68 @@
-#sidebar{
-    background-image: url("/media/gaming.jpg");
+body{
+    margin:0;
 }
 
 #container{
     display: flex;
+}
+
+::placeholder{
+    opacity: 0.5;
+}
+
+#sidebar{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width:35%;
+    height: 100vh;
+    background-image: radial-gradient(at 50% 30%, rgba(0,0,0,0),rgba(0,0,0,0.5) 70%,rgba(0,0,0,1) 90%),url("/media/gaming.jpg");
+    background-position: center;
+    object-fit: cover;
+    align-items: center;
+}
+
+#header img{
+    width:70px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 5px 2px;
+}
+
+@font-face {
+    font-family: "Exo";
+    src: url("/media/Exo-Black.otf");
+}
+
+h1{
+    color:floralwhite;
+    font-family: "Exo", sans-serif;
+}
+
+#main-content{
+    display: flex;
+
+}
+
+#header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap:20px;
+    background-color:rgba(72, 61, 139, 70%);
+    width:100%;
+    padding: 10px 0;
+    margin-top:50%;
+}
+
+#sidebar p{
+    color:white;
+}
+
+#sidebar a:link{
+    color: orange;
+}
+
+#sidebar a:visited{
+    color: darkorange;
 }
