--- a/styles.css
+++ b/styles.css
@@ -65,44 +65,46 @@ h1{
 
 #sidebar p{
     color:white;
-    font-size:small;
+    font-size:0.5rem;
 }
 
 #sidebar a:link, 
-#footer a:link{
+#footer a:link,
+#submit-section a:link{
     color: orange;
 }
 
 #sidebar a:visited,
-#footer a:visited{
+#footer a:visited,
+#submit-section a:visited{
     color: darkorange;
 }
 
 #main-content{
     display: flex;
     flex:2 60%;
-    min-width:80vh;
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgba(92, 92, 92, 0.8);
+    background: radial-gradient(circle, rgba(37, 97, 249,1) 0%, rgba(252,70,107,1) 100%);
 }
 
 #main-text{
     margin-top:5%;
     font-size:1.1rem;
-    max-width:50ch;
+    max-width:60ch;
 }
 
 #form-section{
     background-color: white;
-    padding-bottom: 20px !important;
+    padding: 20px 0 20px 0;
+    margin-bottom: 10px;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 form{
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 
 }
 
@@ -118,6 +120,7 @@ form{
 input{
     margin-bottom:10px;
     color:black;
+    max-width: 60%;
 }
 
 label{
@@ -137,14 +140,29 @@ input[type="submit"]:hover{
     background-color: rgb(191, 43, 131);
 }
 
+input:invalid {
+    border: 2px solid red;
+  }
+
+input:focus{
+    border: 1px solid blue;
+    box-shadow: 1px 1px 1px grey;
+}
+
 #form-section p{
     color:black;
     font-weight: bold;
     font-size: larger;
 }
 
-#submit-section{
-    margin-bottom:10%;
+
+#submit-section a{
+    font-weight: bold;
+}
+
+
+#submit-section a:hover{
+    color:rgb(150, 6, 92);
 }
 
 #main-text,
@@ -152,5 +170,18 @@ input[type="submit"]:hover{
 #submit-section,
 #footer{
     box-sizing: border-box;
-    padding:10px 10px 0 50px;
+    padding-left:50px;
 }
+
+#footer p{
+    font-size:0.6rem;;
+}
+
+@media (max-width: 600px) {
+    #sidebar {
+      flex-basis: 100%;
+    }
+    #main-content {
+      flex-basis: 100%;
+    }
+  }
