--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
-    background-image: radial-gradient(at 50% 30%, rgba(0,0,0,0),rgba(0,0,0,0.5) 70%,rgba(0,0,0,1) 90%),url("/media/gaming.jpg");
+    background-image: radial-gradient(at 50% 30%, rgba(0,0,0,0),rgba(0,0,0,0.5) 70%,rgba(0,0,0,1) 90%),url("./media/gaming.jpg");
     background-position: center;
     object-fit: cover;
     align-items: center;
@@ -37,12 +37,12 @@ body{
 
 @font-face {
     font-family: "Exo";
-    src: url("/media/Exo-Black.otf");
+    src: url("./media/Exo-Black.otf");
 }
 
 @font-face {
     font-family: "Exo-Light";
-    src: url("/media/Exo-Light.otf");
+    src: url("./media/Exo-Light.otf");
 }
 
 h1{
